<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_film">

    <fragment
        android:id="@+id/navigation_film"
        android:name="com.yogadarma.starwars.ui.film.FilmFragment"
        android:label="@string/title_film"
        tools:layout="@layout/fragment_film" />

    <fragment
        android:id="@+id/navigation_people"
        android:name="com.yogadarma.starwars.ui.people.PeopleFragment"
        android:label="@string/title_people"
        tools:layout="@layout/fragment_people" />

    <fragment
        android:id="@+id/navigation_planet"
        android:name="com.yogadarma.starwars.ui.planet.PlanetFragment"
        android:label="@string/title_planet"
        tools:layout="@layout/fragment_planet" />
</navigation>