<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail_planet.DetailPlanetActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:titleTextColor="@android:color/white"
                tools:targetApi="lollipop">

            </androidx.appcompat.widget.Toolbar>

        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <TextView
            android:id="@+id/tv_planet_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Name"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_rotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_rotation_period"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_planet_name" />

        <TextView
            android:id="@+id/label_orbital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_orbital_period"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_planet_rotation" />

        <TextView
            android:id="@+id/label_diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/label_diameter"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_planet_orbital" />

        <TextView
            android:id="@+id/label_climate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_climate"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_planet_diameter" />

        <TextView
            android:id="@+id/label_gravity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_gravity"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_planet_climate" />

        <TextView
            android:id="@+id/label_terrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_terrain"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_planet_gravity" />

        <TextView
            android:id="@+id/label_population"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_population"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_terrain" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="label_population,label_terrain,label_gravity,label_diameter,label_orbital,label_climate,label_rotation"
            tools:layout_editor_absoluteX="395dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/tv_planet_rotation"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_planet_name"
            tools:text="Hallo" />

        <TextView
            android:id="@+id/tv_planet_orbital"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_planet_rotation"
            tools:text="Hallo" />

        <TextView
            android:id="@+id/tv_planet_diameter"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_planet_orbital"
            tools:text="Hallo" />

        <TextView
            android:id="@+id/tv_planet_climate"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_planet_diameter"
            tools:text="Hallo" />

        <TextView
            android:id="@+id/tv_planet_gravity"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_planet_climate"
            tools:text="Hallo" />

        <TextView
            android:id="@+id/tv_planet_terrain"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_planet_gravity"
            tools:text="Hallo" />

        <TextView
            android:id="@+id/tv_planet_population"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_planet_terrain"
            tools:text="Hallo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>